# modelcost

./: .gitignore  HACKING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
howmuch/: calculator.py  cli.py  models.py
howmuch/providers/: cache.py  litellm.py  openrouter.py
llmcost/: calculator.py  cli.py
modelcost/: calculator.py  cli.py  models.py
modelcost/providers/: cache.py  litellm.py
tests/: test_calculator.py  test_cli.py  test_models.py  test_providers_cache.py  test_providers_litellm.py  test_providers_openrouter.py
