[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelcost"
version = "0.1.1"
description = "Calculate LLM API call costs from token usage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Roberto Mier Escandon", email = "rmescandon@gmail.com" }]
keywords = ["llm", "tokens", "cost", "openai", "pricing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "tokencost>=0.1.16",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/rmescandon/modelcost"
Repository = "https://github.com/rmescandon/modelcost"

[project.scripts]
modelcost = "modelcost.cli:main"
