[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelcost"
version = "0.1.6"
description = "Calculate LLM API call costs from token usage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [{ name = "Roberto Mier Escandon", email = "rmescandon@gmail.com" }]
keywords = ["llm", "tokens", "cost", "openai", "pricing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "tokencost>=0.1.16",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/rmescandon/modelcost"
Repository = "https://github.com/rmescandon/modelcost"

[project.scripts]
modelcost = "modelcost.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=modelcost --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["modelcost"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
